--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,13 @@ button:focus-visible {
   text-align: center;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
