--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 .card {
   padding: 2em;
 }
